force-app/main/default/objects/LocalProductCustomAttribute__c/LocalProductCustomAttribute__c.object-meta.xml
<CustomObject>
    <description>LocalProductCustomAttributes数据存储</description>
    <label>LocalProductCustomAttribute</label>
    <nameField>
        <label>LocalProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LocalProductCustomAttributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>