force-app/main/default/objects/LocalProductCustomAttribute__c/fields/LocalProductCode__c.field-meta.xml
<CustomField>
    <fullName>LocalProductCode__c</fullName>
    <label>LocalProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>