force-app/main/default/objects/LocalProductCustomAttribute__c/fields/LocalProductId__c.field-meta.xml
<CustomField>
    <fullName>LocalProductId__c</fullName>
    <label>LocalProductId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>