force-app/main/default/objects/LocalProductCustomAttribute__c/fields/LocalProductName__c.field-meta.xml
<CustomField>
    <fullName>LocalProductName__c</fullName>
    <label>LocalProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>