force-app/main/default/objects/LocalProductCustomAttribute__c/fields/LocalProductPwCNetworkDescriptor__c.field-meta.xml
<CustomField>
    <fullName>LocalProductPwCNetworkDescriptor__c</fullName>
    <label>LocalProductPwCNetworkDescriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>