force-app/main/default/objects/LocalProductCustomAttribute__c/fields/LocalProductPwCNetworkNodeId__c.field-meta.xml
<CustomField>
    <fullName>LocalProductPwCNetworkNodeId__c</fullName>
    <label>LocalProductPwCNetworkNodeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>