force-app/main/default/objects/LocalProductCustomAttribute__c/fields/xLoSReportingProductGroupName__c.field-meta.xml
<CustomField>
    <fullName>xLoSReportingProductGroupName__c</fullName>
    <label>xLoSReportingProductGroupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>