force-app/main/default/objects/LocalProductCustomAttribute__c/fields/xLoSReportingProductSubGroupName__c.field-meta.xml
<CustomField>
    <fullName>xLoSReportingProductSubGroupName__c</fullName>
    <label>xLoSReportingProductSubGroupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>